Vaporwave style applied :3

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,10 @@
 
       <header id="header">
           <a href="#" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
-          <h1><strong>I am <a href="/">Strata</a></strong>, a super simple<br />
-          responsive site template freebie<br />
-          crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+          <h1><strong>Silmood's room</strong></h1>
+          <p>I am Peter, Android developer, <br />
+            SonicPi lover, Vaporwave enthusiast, <br /> GDG Androidtitlan member.<br />
+          </p>
       </header>
 
 
@@ -90,13 +91,6 @@
               </li>
               {% endif %}
             </ul>
-            <ul class="copyright">
-                <li>&copy; Untitled</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Demo Images: <a href="https://unsplash.com/">Unsplash</a></li>
-                <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
-            </ul>
         </footer>
-
 	</body>
 </html>
