--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ comments: true
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'silmood'; // required: replace example with your forum shortname
-            var disqus_developer = 1; // Comment out when the site is live
+            //var disqus_developer = 1; // Comment out when the site is live
             var disqus_identifier = "{{ page.url }}";
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
