--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,76 +1,61 @@
----
-layout: default
-comments: true
----
-<div id="main">
-    <article>
+<!DOCTYPE HTML>
+<!--
+	Strata by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    {% include head.html %}
+    {% include opengraph.html %}
+    {% include twittercard.html %}
+  </head>
+	<body id="top">
+
+		{% include header.html %}
+
+		<!-- Main -->
+		<div id="main">
+      <article>
         <header class="major">
-            <h2 class="post-title">{{ page.title }}</h2>
-                <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+          <h2>{{ page.title }}</h2>
+          <p>
+            <i class="fa fa-calendar"></i> {{ page.date | date: "%d %B %Y" }}{% if page.categories %} on <i class="fa fa-tags"></i> {{ page.categories | array_to_sentence_string }}.{% endif %}
+            {% include readingtime.html %}
+          </p>
         </header>
 
         <section>
-            {{ content }}
-
-
-    {% if page.comments %}
-    <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'silmood'; // required: replace example with your forum shortname
-            //var disqus_developer = 1; // Comment out when the site is live
-            var disqus_identifier = "{{ page.url }}";
-
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    {% endif %}            
+          {{ content }}
         </section>
+      </article>
 
-        <footer>
-            <div class="row">
-            {% if page.previous %}
+      {% include disqus.html %}
 
-                <article class="{% cycle '6u', '6u$' %} 12u(small) excerpt">
-                    <header>
-                        <h2><a href="{{ page.previous.url }}">{{ page.previous.title }}</a></h2>
-                    </header>
-                    <section>
-                        {{ page.previous.excerpt }}
-                    </section>
-                    <footer>
-                        <ul class="actions">
-                            <li><a href="{{ page.previous.url }}" class="button">Read More</a></li>
-                        </ul>
-                    </footer>
-                </article>
-            {% endif %}
+      {% if page.previous.url or page.next.url %}
+      <hr />
+      <div class="row">
+        <article class="6u 12u$(xsmall) work-item">
+          {% if page.previous.url %}
+          <p>Previous</p>
+  				<h3><a href="{{ page.previous.url }}">{{page.previous.title}}</a></h3>
+  				<p>{{ page.previous.excerpt | strip_html }}</p>
+          {% endif %}
+  			</article>
+  			<article class="6u$ 12u$(xsmall) work-item">
+          {% if page.next.url %}
+          <p>Next</p>
+  				<h3><a href="{{ page.next.url }}">{{page.next.title}}</a></h3>
+  				<p>{{ page.next.excerpt | strip_html }}</p>
+          {% endif %}
+  			</article>
+      </div>
+      {% endif %}
 
-            {% if page.next %}
+		</div>
 
-                <article class="{% cycle '6u', '6u$' %} 12u(small) excerpt f-right">
-                    <header>
-                        <h2><a href="{{ page.next.url }}">{{ page.next.title }}</a></h2>
-                    </header>
-                    <section>
-                        {{ page.next.excerpt | markdownify }}
-                    </section>
-                    <footer>
-                        <ul class="actions">
-                            <li><a href="{{ page.next.url }}" class="button">Read More</a></li>
-                        </ul>
-                    </footer>
-                </article>
-            {% endif %}
-            </div>
-        </footer>
+    {% include footer.html %}
+    {% include scripts.html %}
 
-    </article>
-
-</div>
+	</body>
+</html>
