--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -7,7 +7,9 @@
 */
 
 var disqus_config = function () {
-    this.page.url = "{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+    s = "http://silmood.github.io"
+        p = "{{ page.url }}"
+    this.page.url = "http://silmood.github.io/demo"; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
